...
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context="com.subhrajyoti.babai.random.MainActivity"
                tools:showIn="@layout/app_bar_main"
                >

                <me.subhrajyoti.noteworthy.Utils.RecyclerViewEmptySupport
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />


                <TextView
...
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:textColorHint="#000000">

                    <EditText

                        android:id="@+id/title_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:hint="@string/title"
                        android:inputType="text"
                        android:maxLines="1"
...
